--- a/style.css
+++ b/style.css
@@ -13,3 +13,19 @@ h1{
   color: #8c6b48;
   background-color: white;
 }
+h2{
+  font-size: 24px;
+  padding: 15px;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-size: 20px;
+  padding: 15px;
+  text-transform: uppercase;
+  text-align: left;
+  margin-left: 20px;
+  font-weight: 500;
+  line-height: 2.7;
+  letter-spacing: 0.8px;
+}
